--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "HackTheBox/Valentine/heartbleed-poc"]
 	path = HackTheBox/Valentine/heartbleed-poc
 	url = https://github.com/sensepost/heartbleed-poc
+[submodule "HackTheBox/Windows/HackTheBox/Devel/Juicy-Potato-x86"]
+	path = HackTheBox/Windows/HackTheBox/Devel/Juicy-Potato-x86
+	url = https://github.com/A1vinSmith/Juicy-Potato-x86
